# GooglePicz

./: .gitignore  Cargo.toml  Dockerfile.ci  README.md
.github/actions/checks/: action.yml
.github/workflows/: ci.yml  packager.yml  rust.yml
api_client/: Cargo.toml
api_client/src/: lib.rs
api_client/tests/: mock_integration.rs
app/: Cargo.toml
app/src/: config.rs  main.rs
app/tests/: cli.rs  googlepicz_headless_sync.rs  sync_cli.rs  sync_cli_album_commands.rs  sync_cli_all_subcommands.rs  sync_cli_export_import.rs  sync_cli_extra_commands.rs  sync_cli_faces.rs  sync_cli_favorites_search.rs  sync_cli_file_store.rs  sync_cli_full_workflow.rs  sync_cli_integration.rs  sync_cli_list_items.rs  sync_cli_show_item_export_albums.rs  sync_cli_subcommands.rs  sync_cli_sync.rs
auth/: Cargo.toml
auth/src/: lib.rs
auth/tests/: fallback.rs
cache/: Cargo.toml
cache/benches/: cache_bench.rs  real_queries.rs
cache/src/: lib.rs
cache/tests/: cache_manager.rs
docs/: CONFIGURATION.md  Changelog.md  DOCUMENTATION.md  EXAMPLE_CONFIG.md  PERFORMANCE_TUNING.md  RELEASE_ARTIFACTS.md  TODO123.md  Todo-fuer-User.md  USER_GUIDE.md  cache_benchmark_results.md  targetpicture.md
face_recognition/: Cargo.toml
face_recognition/src/: lib.rs
face_recognition/tests/: detect.rs  face_image.b64  roundtrip.rs
mocks/: Cargo.toml
mocks/src/: lib.rs
packaging/: Cargo.toml  installer.nsi
packaging/src/: lib.rs  main.rs  utils.rs
packaging/tests/: ci_checks_bin.rs  cleanup.rs  create_installer.rs  installer_artifacts.rs  missing_tools.rs  package_all.rs  package_all_output.rs  package_all_result.rs  packager_cli.rs  utils.rs
src/: main.rs
sync/: Cargo.toml
sync/benches/: overall.rs
sync/src/: lib.rs
sync/tests/: abort_restart.rs  error_reporting.rs  repeated_failures.rs  status_reporting.rs  sync_flow.rs  sync_media_items_error.rs  token_refresh_abort.rs  token_refresh_restart.rs  token_refresh_task.rs
tests/e2e/: Cargo.toml  capture_screenshots.sh  generate_screenshots.sh  video_playback.rs
tests/e2e/src/: lib.rs
tests/e2e/tests/: album_add_photo_e2e.rs  album_e2e.rs  auth_sync_ui_e2e.rs  export_import_faces_e2e.rs  face_model_missing_e2e.rs  face_tagging_e2e.rs  googlepicz_e2e.rs  list_favorites_e2e.rs  load_photos_e2e.rs  rename_album_e2e.rs  search_e2e.rs  upload_item_e2e.rs  video_playback.rs
tests/mocks/: Cargo.toml
tests/mocks/src/: lib.rs
ui/: Cargo.toml
ui/src/: album_dialogs.rs  dialog.rs  face_recognizer.rs  icon.rs  image_loader.rs  lib.rs  search.rs  settings.rs  style.rs  video.rs  video_downloader.rs
ui/tests/: image_loader.rs  ui_state.rs  video_control.rs
