[workspace]
resolver = "2"
members = [
    "app",
    "auth",
    "api_client",
    "ui",
    "cache",
    "sync",
    "packaging",
    "face_recognition",

    "tests/e2e",
]

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
oauth2 = "4.4"
google-photos1 = "0.1"
rusqlite = "0.34"
rusqlite_migration = "2"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
console-subscriber = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"

auth = { path = "auth" }
sync = { path = "sync" }
ui = { path = "ui" }
cache = { path = "cache" }
api_client = { path = "api_client" }
packaging = { path = "packaging" }
face_recognition = { path = "face_recognition" }
