[package]
name = "googlepicz"
version.workspace = true
edition.workspace = true
description = "Google Photos Desktop Client"

[dependencies]
tokio = { workspace = true }
dirs = { workspace = true }
auth = { workspace = true }
sync = { workspace = true }
ui = { workspace = true }
cache = { workspace = true }
api_client = { workspace = true }
config = "0.13"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
console-subscriber = { workspace = true, optional = true }
clap = { workspace = true }

[build-dependencies]
cargo-bundle-licenses = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"

[features]
console = ["console-subscriber"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
