[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
oauth2 = "4.4"
keyring = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.2"
webbrowser = "0.8"
tracing = { workspace = true }
once_cell = "1"
thiserror = { workspace = true }
dirs = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
file-store = ["dirs", "serde", "serde_json"]

[dev-dependencies]
serial_test = "2"
