[package]
name = "cache"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
rusqlite_migration = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
api_client = { path = "../api_client" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
