[package]
name = "face_recognition"
version.workspace = true
edition.workspace = true

[dependencies]
api_client = { path = "../api_client" }
thiserror = { workspace = true }
tracing = { workspace = true }
cache = { path = "../cache", optional = true }

[features]
cache = ["dep:cache"]
default = []
