[package]
name = "packaging"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }

[dev-dependencies]
serial_test = "2"
[build-dependencies]
cargo-bundle-licenses = "0.4"

[[bin]]
name = "packager"
path = "src/main.rs"
