[package]
name = "sync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
auth = { path = "../auth" }
api_client = { path = "../api_client" }
cache = { path = "../cache" }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = "2"

[features]
trace-spans = []
