[package]
name = "sync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
auth = { path = "../auth" }
api_client = { path = "../api_client" }
cache = { path = "../cache" }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = "2"
ui = { path = "../ui", default-features = false, features = ["no-gstreamer"] }
iced = { version = "0.12", features = ["wgpu", "tokio", "image"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }

[features]
trace-spans = []
