[package]
name = "sync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
auth = { path = "../auth" }
api_client = { path = "../api_client" }
cache = { path = "../cache" }
face_recognition = { path = "../face_recognition", optional = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = "2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
criterion = "0.5"

[features]
trace-spans = []
face-recognition = ["dep:face_recognition", "face_recognition/cache"]

[[bench]]
name = "overall"
harness = false
