[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["wgpu", "tokio", "image"] }
wgpu = "0.19"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
cache = { path = "../cache" }
api_client = { path = "../api_client" }
reqwest = { version = "0.11", features = ["json"] }
sync = { path = "../sync" }
tracing = "0.1"
auth = { path = "../auth" }
rfd = { version = "0.15", default-features = false, features = ["tokio", "xdg-portal"] }
