[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["wgpu", "tokio", "image"] }
wgpu = "0.19"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
cache = { path = "../cache" }
api_client = { path = "../api_client" }
reqwest = { version = "0.11", features = ["json"] }
sync = { path = "../sync" }
auth = { path = "../auth" }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
futures = "0.3"
gstreamer_iced = { version = "0.1", optional = true }

[dev-dependencies]
httpmock = "0.6"
tempfile = "3"
serial_test = "2"

[features]
trace-spans = []
gstreamer = ["gstreamer_iced"]
default = ["gstreamer"]

