[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["wgpu", "tokio", "image"] }
wgpu = "0.19"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
cache = { path = "../cache" }
api_client = { path = "../api_client" }
reqwest = { version = "0.11", features = ["json"] }
sync = { path = "../sync" }
auth = { path = "../auth" }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
face_recognition = { path = "../face_recognition", default-features = false }
futures = "0.3"
google_material_symbols = "0.2"
gstreamer_iced = { version = "0.1.8", optional = true }
serde = { version = "1", features = ["derive"] }
toml = "0.5"
rfd = "0.14"
tempfile = "3"

[dev-dependencies]
httpmock = "0.6"
serial_test = "2"

[features]
trace-spans = []
gstreamer = ["gstreamer_iced"]
no-gstreamer = []
default = ["gstreamer"]

