[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
cache = { path = "../../cache" }
api_client = { path = "../../api_client" }
gstreamer_iced = "0.1"
auth = { path = "../../auth" }
sync = { path = "../../sync", default-features = false }
ui = { path = "../../ui", default-features = false }

[[test]]
name = "album_e2e"
path = "tests/album_e2e.rs"
harness = false

[[test]]
name = "load_photos_e2e"
path = "tests/load_photos_e2e.rs"
harness = false

[[test]]
name = "search_e2e"
path = "tests/search_e2e.rs"
harness = false

[[test]]
name = "video_playback"
path = "tests/video_playback.rs"

[[test]]
name = "auth_sync_ui_e2e"
path = "tests/auth_sync_ui_e2e.rs"
harness = false
