[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
cache = { path = "../../cache" }
api_client = { path = "../../api_client" }
gstreamer_iced = "0.1"
base64 = "0.21"
face_recognition = { path = "../../face_recognition", features = ["cache"] }

[[test]]
name = "album_e2e"
path = "tests/album_e2e.rs"
harness = false

[[test]]
name = "load_photos_e2e"
path = "tests/load_photos_e2e.rs"
harness = false

[[test]]
name = "search_e2e"
path = "tests/search_e2e.rs"
harness = false

[[test]]
name = "album_add_photo_e2e"
path = "tests/album_add_photo_e2e.rs"
harness = false

[[test]]
name = "video_playback"
path = "video_playback.rs"

[[test]]
name = "face_tagging_e2e"
path = "tests/face_tagging_e2e.rs"
harness = false

[features]
trace-spans = []
